--- a/app/src/main/res/layout/csserver_fragment.xml
+++ b/app/src/main/res/layout/csserver_fragment.xml
@@ -196,6 +196,15 @@
         android:id="@+id/imageView"
         android:layout_below="@+id/tableLayout2"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/sw_background" />
+        android:src="@drawable/sw_background"
+        android:visibility="invisible" />
+
+    <WebView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/webView"
+        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignLeft="@+id/imageView"
+        android:layout_alignStart="@+id/imageView" />
 
 </RelativeLayout>
