Webview now shows images zoomed out and added zoom in functionality.

--- a/app/src/main/res/layout/csserver_fragment.xml
+++ b/app/src/main/res/layout/csserver_fragment.xml
@@ -205,6 +205,7 @@
         android:id="@+id/webView"
         android:layout_alignBottom="@+id/imageView"
         android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView" />
+        android:layout_alignStart="@+id/imageView"
+        android:isScrollContainer="false" />
 
 </RelativeLayout>
