--- a/app/src/main/res/layout/image_upload_layout.xml
+++ b/app/src/main/res/layout/image_upload_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/upload_input_button_layout"
-        android:id="@+id/gallery_single_image_view"/>
+        android:id="@+id/upload_image_view"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -26,7 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:id="@+id/gallery_single_image_description_text"
+            android:id="@+id/upload_name_input"
             android:padding="5dp"
             android:minLines="1"
             android:maxLines="2"
