--- a/app/src/main/res/layout/csserver_fragment.xml
+++ b/app/src/main/res/layout/csserver_fragment.xml
@@ -49,7 +49,7 @@
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Versions Available"
+                android:text="Version Number"
                 android:id="@+id/textView"
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
@@ -67,145 +67,39 @@
 
     </TableLayout>
 
-    <TableLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_below="@+id/tableLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/tableLayout2">
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginTop="25dp">
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="DSID"
-                android:id="@+id/textView2"
-                android:layout_marginLeft="25dp"
-                android:textSize="18sp"
-                android:textColor="#0078c9"
-                android:layout_marginRight="100dp" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="DSID Value"
-                android:id="@+id/textView6"
-                android:layout_marginLeft="25dp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Time Created"
-                android:id="@+id/textView9"
-                android:layout_marginLeft="25dp"
-                android:textSize="18sp"
-                android:textColor="#0078c9"
-                android:layout_marginRight="100dp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Timestamp Value"
-                android:id="@+id/textView10"
-                android:layout_marginLeft="25dp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Bytes"
-                android:id="@+id/textView3"
-                android:layout_marginLeft="25dp"
-                android:textSize="18sp"
-                android:textColor="#0078c9" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Bytes Value"
-                android:id="@+id/textView7"
-                android:singleLine="false"
-                android:layout_marginRight="50dp"
-                android:layout_marginLeft="25dp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Format"
-                android:id="@+id/textView4"
-                android:singleLine="false"
-                android:layout_marginLeft="25dp"
-                android:textSize="18sp"
-                android:textColor="#0078c9" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Format Value"
-                android:id="@+id/textView8"
-                android:layout_marginRight="50dp"
-                android:layout_marginLeft="25dp" />
-        </TableRow>
-    </TableLayout>
-
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/imageView"
-        android:layout_below="@+id/tableLayout2"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/sw_background"
-        android:visibility="invisible" />
+        android:id="@+id/linearLayout">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="File Information"
+            android:id="@+id/textView2"
+            android:textSize="18sp"
+            android:textColor="#0078c9" />
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:id="@+id/listView"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textSize="15sp"
+            android:textColor="#0078c9" />
+    </LinearLayout>
 
     <WebView
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/webView"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView"
-        android:isScrollContainer="false" />
+        android:isScrollContainer="false"
+        android:layout_below="@+id/linearLayout"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
