Changing CS Server class and added Fragment to enlarge WebView image

--- a/app/src/main/res/layout/versioninfo_list.xml
+++ b/app/src/main/res/layout/versioninfo_list.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="fill_parent"
+    android:layout_height="50dp">
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:id="@+id/textView"
-        android:textSize="20px"
+        android:textSize="16sp"
+        android:textColor="#0078c9"
         android:paddingTop="10dip"
         android:paddingBottom="10dip" />
+
 </LinearLayout>
