--- a/app/src/main/res/layout/csserver_fragment.xml
+++ b/app/src/main/res/layout/csserver_fragment.xml
@@ -91,7 +91,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textSize="15sp"
-            android:textColor="#0078c9" />
+            android:textColor="#0078c9"
+            android:layout_gravity="right" />
     </LinearLayout>
 
     <WebView
@@ -101,5 +102,53 @@
         android:isScrollContainer="false"
         android:layout_below="@+id/linearLayout"
         android:layout_centerHorizontal="true" />
+    <!--Blue bar on bottom of screen-->
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#009dd9"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/input_layout">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/grouped_Layout">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/enlarge_img"
+                android:background="#00ffffff"
+                android:src="@drawable/abc_ic_commit_search_api_holo_light"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enlarge"
+                android:id="@+id/textView3"
+                android:textColor="@color/White"
+                android:textSize="15sp"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical" />
+        </LinearLayout>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/download_and_save"
+            android:background="#00ffffff"
+            android:src="@android:drawable/ic_menu_save"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
