--- a/app/src/main/res/layout/downloadview_fragment.xml
+++ b/app/src/main/res/layout/downloadview_fragment.xml
@@ -38,7 +38,7 @@
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
-                android:id="@+id/imageButton2"
+                android:id="@+id/searchButton"
                 android:src="@android:drawable/ic_menu_search" />
         </TableRow>
 
