--- a/app/src/main/res/layout/image_upload_layout.xml
+++ b/app/src/main/res/layout/image_upload_layout.xml
@@ -35,7 +35,7 @@
             android:layout_height="?android:attr/actionBarSize"
             android:id="@+id/image_upload_button"
             android:layout_margin="4dp"
-            android:background="#0099CC"
+            android:background="#00000000"
             android:src="@drawable/ic_action_upload"/>
     </LinearLayout>
 </LinearLayout>
