--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -39,6 +39,7 @@
             android:layout_gravity="center_horizontal"
             android:textSize="23sp"
             android:textColor="#0078c9"
+            android:background="#00000000"
             android:layout_centerHorizontal="true" />
     </LinearLayout>
 
@@ -59,6 +60,7 @@
             android:id="@+id/textView2"
             android:textSize="22sp"
             android:textColor="#0078c9"
+            android:background="#00000000"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
