--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -77,7 +77,7 @@
     <color name="PaleTurquoise">#AFEEEE</color>
     <color name="GreenYellow">#ADFF2F</color>
     <color name="LightBlue">#ADD8E6</color>
-    <color name="DarkGray">#A9A9A9</color>
+    <color name="MediumGray">#A9A9A9</color>
     <color name="Brown">#A52A2A</color>
     <color name="Sienna">#A0522D</color>
     <color name="YellowGreen">#9ACD32</color>
@@ -139,6 +139,8 @@
     <color name="MediumBlue">#0000CD</color>
     <color name="DarkBlue">#00008B</color>
     <color name="Navy">#000080</color>
+    <color name="LightGray">#dddddd</color>
+    <color name="DarkGray">#111111</color>
     <color name="Black">#000000</color>
 
     <color name="edit_text_background_light">#ffffff</color>
