--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,45 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <!-- Light Theme -->
+    <style name="LightTheme"
+        parent="@android:style/Theme.Holo.Light.DarkActionBar">
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:actionBarItemBackground">@drawable/transparent_background</item>\>
+        <item name="android:editTextStyle">@style/LightTheme.LightEditText</item>
     </style>
 
+
+    <!-- ActionBar styles -->
+    <style name="MyActionBar"
+        parent="@android:style/Widget.Holo.ActionBar.Solid">
+        <item name="android:background">@drawable/actionbar_background</item>
+        <item name="android:displayOptions">showHome|useLogo</item>
+        <item name="displayOptions">showHome|useLogo</item>
+        <item name="android:titleTextStyle">@style/NoTitleText</item>
+        <item name="android:subtitleTextStyle">@style/NoTitleText</item>
+    </style>
+
+    <style name="NoTitleText">
+        <item name="android:textSize">0sp</item>
+        <item name="android:textColor">#00000000</item>
+        <item name="android:background">@drawable/actionbar_background</item>
+    </style>
+
+    <!-- EditText Style -->
+    <style name="LightTheme.LightEditText">
+        <item name="android:background">@color/LightGray</item>
+        <item name="android:textColor">@color/DarkGray</item>
+    </style>
+
+    <style name="LightTextView">
+        <item name="android:background">@color/LightGray</item>
+        <item name="android:textColor">@color/DarkGray</item>
+    </style>
+
+
+
+
+    <!-- Dark Theme -->
+
 </resources>
+
