--- a/app/src/main/res/layout/txt_xml_upload_layout.xml
+++ b/app/src/main/res/layout/txt_xml_upload_layout.xml
@@ -4,19 +4,22 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/editText"
-        android:gravity="top"
-        android:isScrollContainer="true"/>
+        android:padding="4dp"
+        android:gravity="top"/>
+    </ScrollView>
     <LinearLayout
         android:id="@+id/upload_layout"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="#0099CC">
+        android:background="#0078c9">
         <EditText
             android:id="@+id/txt_xml_name"
             android:layout_width="0dp"
@@ -24,7 +27,8 @@
             android:gravity="top"
             android:layout_height="match_parent"
             android:layout_margin="4dp"
-            android:maxLength="40"/>
+            android:maxLength="40"
+            android:background="#ffffff"/>
         <ImageButton
             android:id="@+id/txt_xml_upload_button"
             android:layout_width="?android:attr/actionBarSize"
