--- a/app/src/main/res/drawable/actionbar_background.xml
+++ b/app/src/main/res/drawable/actionbar_background.xml
@@ -2,5 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-<solid android:color="#0099CC"/>
+<solid android:color="#0078c9"/>
 </shape>
