--- a/app/src/main/res/layout/gallery.xml
+++ b/app/src/main/res/layout/gallery.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#111111">
-
-
-    <LinearLayout
-        android:id="@+id/gallery_progress_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone" >
-
-        <ProgressBar
-            android:id="@+id/gallery_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </ProgressBar>
-    </LinearLayout>
+    android:background="#111111"
+    android:orientation="vertical">
 
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:id="@+id/gridView"
-        android:layout_gravity="center"
         android:numColumns="auto_fit"
         android:stretchMode="none"/>
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="#0078c9">
+
+
+        <ImageButton
+            android:layout_width="?android:attr/actionBarSize"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+            android:id="@+id/open_camera_button"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_action_camera"
+            android:background="#00000000"/>
+
+
+    </RelativeLayout>
+</LinearLayout>
