--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome to Phone Capture"
+            android:text="Welcome to CloudCapture"
             android:typeface="serif"
             android:id="@+id/textView"
             android:layout_gravity="center_horizontal"
@@ -43,7 +43,7 @@
             android:layout_centerHorizontal="true" />
     </LinearLayout>
 
-    <LinearLayout
+<!--    <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="65dp"
@@ -62,7 +62,7 @@
             android:textColor="#0078c9"
             android:background="#00000000"
             android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+    </LinearLayout>-->
 
 
 
