--- a/app/src/main/res/layout/file_view.xml
+++ b/app/src/main/res/layout/file_view.xml
@@ -1,41 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
+    android:layout_height="50dp"
+    android:orientation="horizontal"
+    android:background="@drawable/actionbar_background"
+    android:layout_width="match_parent">
 <ImageView
     android:id="@+id/fd_Icon1"
-    android:layout_width="50dip"
-    android:layout_height="50dip" >
+    android:layout_width="50dp"
+    android:layout_height="match_parent"
+    android:layout_margin="4dp">
 </ImageView>
                 
 <TextView android:text="TextView01"
     android:id="@+id/TextView01" 
-    android:layout_width="wrap_content" 
-    android:layout_height="wrap_content" 
-    android:singleLine="true" 
-    android:textStyle="bold" 
-    android:layout_toRightOf="@+id/fd_Icon1"
-    android:layout_marginTop="5dip"  
-    android:layout_marginLeft="5dip">
+    android:layout_width="0dp"
+    android:layout_weight="1"
+    android:layout_height="match_parent"
+    android:singleLine="true"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:layout_margin="4dp"
+    android:gravity="center_vertical"
+    android:textColor="#ffffff">
     
     
 </TextView>
 <TextView android:text="TextView02"
     android:id="@+id/TextView02" 
-    android:layout_width="wrap_content" 
-    android:layout_height="wrap_content" 
-    android:layout_toRightOf="@+id/fd_Icon1"
-    android:layout_below="@+id/TextView01"
-    android:layout_marginLeft="10dip">
+    android:layout_width="0dp"
+    android:layout_height="0dp">
     
 </TextView>
 <TextView android:text="TextViewDate"
     android:id="@+id/TextViewDate" 
     android:layout_width="wrap_content" 
-    android:layout_height="wrap_content" 
-    android:layout_below="@+id/TextView01"
-    android:layout_alignParentRight="true"
-    android:layout_marginLeft="5dip">
+    android:layout_height="match_parent"
+    android:gravity="center_vertical|end"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:layout_margin="4dp"
+    android:textColor="#ffffff">
     
 </TextView>
-</RelativeLayout>
+</LinearLayout>
