--- a/app/src/main/res/layout/image_upload_layout.xml
+++ b/app/src/main/res/layout/image_upload_layout.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="?android:attr/actionBarSize">
 
     <com.ameraz.android.cipdfcapture.app.ExtendedClasses.GestureImageView
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
 
         <ImageButton
             android:layout_width="?android:attr/actionBarSize"
-            android:layout_height="?android:attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:id="@+id/image_upload_button"
             android:layout_margin="4dp"
             android:background="#00000000"
