--- a/app/src/main/res/layout/file_explorer_list.xml
+++ b/app/src/main/res/layout/file_explorer_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView android:id="@+id/file_explorer"
+    <ListView android:id="@+id/file_explorer_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
