--- a/app/src/main/res/layout/download_listview.xml
+++ b/app/src/main/res/layout/download_listview.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.ameraz.android.cipdfcapture.app.ExtendedClasses.GestureImageView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:id="@+id/listView"
         android:layout_weight="1"
-        android:id="@+id/upload_image_view"/>
+        android:layout_gravity="center_horizontal" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -27,15 +27,14 @@
             android:id="@+id/upload_name_input"
             android:hint="Name: 40 character max"
             android:gravity="top"
-            android:maxLength="40"
             android:background="#ffffff"/>
 
         <ImageButton
             android:layout_width="?android:attr/actionBarSize"
             android:layout_height="?android:attr/actionBarSize"
-            android:id="@+id/image_upload_button"
+            android:id="@+id/image_search_button"
             android:padding="4dp"
             android:background="#00000000"
-            android:src="@drawable/ic_action_upload"/>
+            android:src="@drawable/ic_action_search"/>
     </LinearLayout>
 </LinearLayout>
