--- a/app/src/main/res/layout/pdf_upload_layout.xml
+++ b/app/src/main/res/layout/pdf_upload_layout.xml
@@ -1,38 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
-    <WebView
+    <com.joanzapata.pdfview.PDFView
         android:id="@+id/pdf_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-    <ImageButton
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pdf_edit_button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
-        android:src="@drawable/ic_action_edit"
-        android:background="#0099CC"/>
+        android:background="#0078c9"
+        android:id="@+id/upload_input_button_layout">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/pdf_upload_button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginEnd="15dp"
-        android:src="@drawable/ic_action_upload"
-        android:background="#0099CC"/>
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:gravity="center_vertical"
+            android:padding="4dp"
+            android:textColor="@color/WhiteSmoke"
+            android:id="@+id/pdf_page_counter" />
+
+
+
+        <EditText
+            android:layout_margin="4dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/pdf_name_input"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:hint="Name: 40 character max"
+            android:gravity="top"
+            android:maxLength="40"
+            android:background="@color/WhiteSmoke"
+            android:visibility="invisible"/>
+
+
+        <ImageButton
+            android:layout_width="?android:attr/actionBarSize"
+            android:layout_height="?android:attr/actionBarSize"
+            android:id="@+id/pdf_edit_button"
+            android:padding="4dp"
+            android:background="#00000000"
+            android:src="@drawable/ic_action_edit"/>
+
+        <ImageButton
+            android:layout_width="?android:attr/actionBarSize"
+            android:layout_height="?android:attr/actionBarSize"
+            android:id="@+id/pdf_upload_button"
+            android:padding="4dp"
+            android:background="#00000000"
+            android:src="@drawable/ic_action_upload"/>
+    </LinearLayout>
+</LinearLayout>
