Fixed downloads, but need to show progress bar correctly.

--- a/app/src/main/res/layout/fragment_downloadview.xml
+++ b/app/src/main/res/layout/fragment_downloadview.xml
@@ -31,7 +31,7 @@
             <EditText
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText"
+                android:id="@+id/reportName"
                 android:layout_marginLeft="25dp"
                 android:hint="Fully Qualified Report Name" />
 
