--- a/app/src/main/res/layout/fragment_download.xml
+++ b/app/src/main/res/layout/fragment_download.xml
@@ -24,7 +24,7 @@
             android:layout_margin="4dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Medium Text"
-            android:id="@+id/editText"
+            android:id="@+id/reportName"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -35,7 +35,7 @@
             android:padding="4dp"
             android:background="#00000000"
             android:src="@drawable/ic_action_search"
-            android:layout_toRightOf="@+id/editText"/>
+            android:layout_toRightOf="@+id/reportName"/>
 
         <ImageButton
             android:layout_width="?android:attr/actionBarSize"
