--- a/app/src/main/res/layout/txt_xml_upload_layout.xml
+++ b/app/src/main/res/layout/txt_xml_upload_layout.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/editText"
+        android:id="@+id/reportName"
         android:padding="4dp"
         android:gravity="top"/>
     </ScrollView>
